// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrFinalCommentHr Component displays an info text before the employee has finalized 1`] = `
<WithStyles(List)>
  <WithStyles(ListItem)>
    <WithStyles(Grid)
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <WithStyles(Typography)
          component="p"
        >
          Abschließender Kommentar durch HR-Mitarbeiter (optional)
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <WithStyles(Typography)
          className="PrFinalCommentHr-comment-2"
          id="finalCommentHrReadonly"
          variant="body1"
        >
          Bitte nach Abschluss durch den Mitarbeiter ausfüllen.
        </WithStyles(Typography)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(ListItem)>
</WithStyles(List)>
`;

exports[`PrFinalCommentHr Component displays the PrFinalCommentHr 1`] = `
<WithStyles(List)>
  <WithStyles(ListItem)>
    <WithStyles(Grid)
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <WithStyles(Typography)
          component="p"
        >
          Abschließender Kommentar durch HR-Mitarbeiter (optional)
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <TextField
          InputLabelProps={
            Object {
              "shrink": true,
            }
          }
          InputProps={
            Object {
              "classes": Object {
                "input": "PrFinalCommentHr-bootstrapInput-1",
              },
              "disableUnderline": true,
              "name": "comment",
            }
          }
          fullWidth={true}
          helperText="Möchte ich letzte Anmerkungen zum Performance Review machen?
                          Gibt es noch etwas zu ergänzen? Ich bestätige, dass ich das Review zur Kenntnis genommen habe."
          id="finalCommentHr"
          margin="none"
          multiline={true}
          onChange={[Function]}
          placeholder="Möchte ich letzte Anmerkungen zum Performance Review machen? Gibt es noch etwas zu ergänzen?"
          required={false}
          rows="4"
          rowsMax="10"
          select={false}
          value=""
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(ListItem)>
</WithStyles(List)>
`;

exports[`PrFinalCommentHr Component displays the text read-only after HR has finalized 1`] = `
<WithStyles(List)>
  <WithStyles(ListItem)>
    <WithStyles(Grid)
      container={true}
      direction="column"
    >
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <WithStyles(Typography)
          component="p"
        >
          Abschließender Kommentar durch HR-Mitarbeiter (optional)
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        lg={12}
        md={12}
        sm={12}
        xl={12}
        xs={12}
      >
        <WithStyles(Typography)
          className="PrFinalCommentHr-comment-2"
          id="finalCommentHrReadonly"
          variant="body1"
        >
          Kein Eintrag.
        </WithStyles(Typography)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(ListItem)>
</WithStyles(List)>
`;
